playing music now works